--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
 	</dependencies>
 
 	<build>
-		<finalName>demoIntegration</finalName>
+		<finalName>demo_integration</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
